@@ -1,9 +1,9 @@
 /*
- * GovPay - Porta di Accesso al Nodo dei Pagamenti SPC 
+ * GovPay - Porta di Accesso al Nodo dei Pagamenti SPC
  * http://www.gov4j.it/govpay
- * 
+ *
  * Copyright (c) 2014-2025 Link.it srl (http://www.link.it).
- * 
+ *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 3, as published by
  * the Free Software Foundation.
@@ -21,18 +21,6 @@ package it.govpay.rs;
 
 import java.lang.reflect.Method;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
-import javax.ws.rs.Path;
-//import javax.ws.rs.OPTIONS;
-//import javax.ws.rs.Path;
-//import javax.ws.rs.PathParam;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.UriInfo;
 
 import org.openspcoop2.utils.LoggerWrapperFactory;
 import org.openspcoop2.utils.service.context.ContextThreadLocal;
@@ -53,10 +41,18 @@ import it.govpay.core.beans.commons.Dominio;
 import it.govpay.core.beans.commons.Dominio.Uo;
 import it.govpay.core.dao.anagrafica.UtentiDAO;
 import it.govpay.core.utils.GpContext;
+import it.govpay.core.utils.LogUtils;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.UriInfo;
 
 
 public abstract class BaseRsService {
-	
+
 	public static final String ERRORE_INTERNO = "Errore Interno";
 
 	@Context protected HttpServletRequest request;
@@ -87,19 +83,15 @@ public abstract class BaseRsService {
 	}
 
 	protected Response getUnauthorizedResponse(){
-		Response res =	Response.status(Response.Status.UNAUTHORIZED)
+		return Response.status(Response.Status.UNAUTHORIZED)
 				.header("Access-Control-Allow-Origin", "*")
 				.build();
-
-		return res;
 	}
 
 	protected Response getForbiddenResponse(){
-		Response res =	Response.status(Response.Status.FORBIDDEN)
+		return Response.status(Response.Status.FORBIDDEN)
 				.header("Access-Control-Allow-Origin", "*")
 				.build();
-
-		return res;
 	}
 
 	public void invalidateSession(Logger log){
@@ -123,27 +115,26 @@ public abstract class BaseRsService {
 	}
 
 	public abstract int getVersione();
-	
+
 	protected IContext getContext() {
 		IContext context = ContextThreadLocal.get();
-		if(context instanceof org.openspcoop2.utils.service.context.Context) {
-			((org.openspcoop2.utils.service.context.Context)context).update(this.request, this.response, this.uriInfo, 2, this.log);
-			((org.openspcoop2.utils.service.context.Context)context).setRestPath(this.getPathFromRestMethod(context.getMethodName()));
-			
-			GpContext ctx = (GpContext) ((org.openspcoop2.utils.service.context.Context)context).getApplicationContext();
+		if(context instanceof org.openspcoop2.utils.service.context.Context op2Context) {
+			op2Context.update(this.request, this.response, this.uriInfo, 2, this.log);
+			op2Context.setRestPath(this.getPathFromRestMethod(context.getMethodName()));
+
+			GpContext ctx = (GpContext) op2Context.getApplicationContext();
 			ctx.getEventoCtx().setCategoriaEvento(Categoria.INTERFACCIA);
 			ctx.getEventoCtx().setMethod(this.request.getMethod());
 			ctx.getEventoCtx().setTipoEvento(context.getMethodName());
 			ctx.getEventoCtx().setPrincipal(AutorizzazioneUtils.getPrincipal(context.getAuthentication()));
 			GovpayLdapUserDetails authenticationDetails = AutorizzazioneUtils.getAuthenticationDetails(context.getAuthentication());
-			String baseUri = request.getRequestURI(); // uriInfo.getBaseUri().toString();
+			String baseUri = request.getRequestURI();
 			String requestUri = uriInfo.getRequestUri().toString();
 			int idxOfBaseUri = requestUri.indexOf(baseUri);
-			
-//			String servicePathwithParameters = requestUri.substring((idxOfBaseUri + baseUri.length()) - 1);
+
 			String servicePathwithParameters = requestUri.substring(idxOfBaseUri);
 			ctx.getEventoCtx().setUrl(servicePathwithParameters);
-			
+
 			StringBuilder sb = new StringBuilder();
 			sb.append("Ricevuta una richiesta:");
 			sb.append("\n");
@@ -155,29 +146,31 @@ public abstract class BaseRsService {
 			sb.append("\n");
 			if(authenticationDetails != null) {
 				Utenza utenza = authenticationDetails.getUtenza();
-				
+
 				switch(utenza.getTipoUtenza()) {
-				case CITTADINO:
-				case ANONIMO:
+				case CITTADINO, ANONIMO:
 					ctx.getEventoCtx().setUtente(authenticationDetails.getIdentificativo());
-					break;
+				break;
 				case APPLICAZIONE:
 					ctx.getEventoCtx().setUtente(((UtenzaApplicazione)utenza).getCodApplicazione());
 					break;
 				case OPERATORE:
 					ctx.getEventoCtx().setUtente(((UtenzaOperatore)utenza).getNome());
 					break;
+				default:
+					ctx.getEventoCtx().setUtente("Utenza "+utenza.getPrincipal()+" di tipo "+ utenza.getTipoUtenza()+" non supportato.");
+					break;
 				}
-				
+
 				sb.append("Profilo: \n");
 				sb.append("\t[\n\t").append("TipoUtenza: [").append(authenticationDetails.getTipoUtenza()).append("], Abilitato: [").append(utenza.isAbilitato()).append("]");
 				sb.append("\n");
 				sb.append("\t").append("Id Transazione Autenticazione: [").append(authenticationDetails.getIdTransazioneAutenticazione()).append("]");
 				sb.append("\n");
 				sb.append("\t").append("ACL:").append("\n").append("\t\t[\n");
-				
+
 				List<Acl> aclsProfilo = utenza.getAclsProfilo();
-				
+
 				this.printAcl(sb, aclsProfilo);
 				sb.append("\t\t]\n");
 				sb.append("\t");
@@ -190,7 +183,7 @@ public abstract class BaseRsService {
 			sb.append("Query Params: [").append(this.uriInfo.getQueryParameters()).append("]");
 			sb.append("\n");
 			sb.append("Path Params: [").append(this.uriInfo.getPathParameters()).append("]");
-			this.log.debug(sb.toString());
+			this.logDebug(sb.toString());
 		}
 		return context;
 	}
@@ -199,7 +192,7 @@ public abstract class BaseRsService {
 		for (Acl acl : aclsProfilo) {
 			sb.append("\t").append("\t");
 			sb.append("Ruolo[").append(acl.getRuolo()).append("], IdUtenza: [").append(acl.getIdUtenza())
-				.append("], Servizio: [").append(acl.getServizio()).append("], Diritti: [").append(acl.getListaDirittiString()).append("]");
+			.append("], Servizio: [").append(acl.getServizio()).append("], Diritti: [").append(acl.getListaDirittiString()).append("]");
 			sb.append("\n");
 		}
 	}
@@ -207,7 +200,7 @@ public abstract class BaseRsService {
 	private void printAutorizzazioneTipiVersamento(StringBuilder sb, Utenza utenza) {
 		if(utenza.isAutorizzazioneTipiVersamentoStar())
 			sb.append("TipiPendenza: [Tutti]");
-		else 
+		else
 			sb.append("TipiPendenza: [").append(utenza.getIdTipoVersamento()).append("]");
 	}
 
@@ -217,13 +210,13 @@ public abstract class BaseRsService {
 		else {
 			List<IdUnitaOperativa> dominiUo = utenza.getDominiUo();
 			if(dominiUo != null) {
-				List<Dominio> domini = UtentiDAO.convertIdUnitaOperativeToDomini(dominiUo); 
+				List<Dominio> domini = UtentiDAO.convertIdUnitaOperativeToDomini(dominiUo);
 				sb.append("Domini: [");
 				for (Dominio dominio : domini) {
 					sb.append("\t\t");
-					
+
 					sb.append(dominio.getCodDominio()).append(", UO: [").append((dominio.getUo() != null ? (
-							dominio.getUo().stream().map(Uo::getCodUo).collect(Collectors.toList())
+							dominio.getUo().stream().map(Uo::getCodUo).toList()
 							) : "Tutte")).append("]");
 				}
 				sb.append("\t");
@@ -233,32 +226,31 @@ public abstract class BaseRsService {
 			}
 		}
 	}
-	
+
 	protected void buildContext() {
-		IContext context = ContextThreadLocal.get(); 
-		if(context instanceof org.openspcoop2.utils.service.context.Context) {
-			((org.openspcoop2.utils.service.context.Context)context).update(this.request, this.response, this.uriInfo, 2, this.log);
-			((org.openspcoop2.utils.service.context.Context)context).setRestPath(this.getPathFromRestMethod(context.getMethodName()));
-			
-			GpContext ctx = (GpContext) ((org.openspcoop2.utils.service.context.Context)context).getApplicationContext();
+		IContext context = ContextThreadLocal.get();
+		if(context instanceof org.openspcoop2.utils.service.context.Context op2Context) {
+			op2Context.update(this.request, this.response, this.uriInfo, 2, this.log);
+			op2Context.setRestPath(this.getPathFromRestMethod(context.getMethodName()));
+
+			GpContext ctx = (GpContext) op2Context.getApplicationContext();
 			ctx.getEventoCtx().setCategoriaEvento(Categoria.INTERFACCIA);
 			ctx.getEventoCtx().setMethod(this.request.getMethod());
 			ctx.getEventoCtx().setTipoEvento(context.getMethodName());
 			ctx.getEventoCtx().setPrincipal(AutorizzazioneUtils.getPrincipal(context.getAuthentication()));
 			GovpayLdapUserDetails authenticationDetails = AutorizzazioneUtils.getAuthenticationDetails(context.getAuthentication());
-			String baseUri = request.getRequestURI(); // uriInfo.getBaseUri().toString();
+			String baseUri = request.getRequestURI();
 			String requestUri = uriInfo.getRequestUri().toString();
 			int idxOfBaseUri = requestUri.indexOf(baseUri);
-			
-//			String servicePathwithParameters = requestUri.substring((idxOfBaseUri + baseUri.length()) - 1);
+
 			String servicePathwithParameters = requestUri.substring(idxOfBaseUri);
 			ctx.getEventoCtx().setUrl(servicePathwithParameters);
-			
+
 			String idSessione = null;
 			if(this.request.getSession() != null) {
 				idSessione = this.request.getSession().getId();
 			}
-			
+
 			StringBuilder sb = new StringBuilder();
 			sb.append("Ricevuta una richiesta:");
 			sb.append("\n");
@@ -271,18 +263,20 @@ public abstract class BaseRsService {
 			if(authenticationDetails != null) {
 				Utenza utenza = authenticationDetails.getUtenza();
 				switch(utenza.getTipoUtenza()) {
-				case CITTADINO:
-				case ANONIMO:
+				case CITTADINO, ANONIMO:
 					ctx.getEventoCtx().setUtente(authenticationDetails.getIdentificativo());
-					break;
+				break;
 				case APPLICAZIONE:
 					ctx.getEventoCtx().setUtente(((UtenzaApplicazione)utenza).getCodApplicazione());
 					break;
 				case OPERATORE:
 					ctx.getEventoCtx().setUtente(((UtenzaOperatore)utenza).getNome());
 					break;
+				default:
+					ctx.getEventoCtx().setUtente("Utenza "+utenza.getPrincipal()+" di tipo "+ utenza.getTipoUtenza()+" non supportato.");
+					break;
 				}
-				
+
 				sb.append("Profilo: \n");
 				sb.append("\t[\n\t").append("TipoUtenza: [").append(authenticationDetails.getTipoUtenza()).append("], Abilitato: [").append(utenza.isAbilitato()).append("]");
 				if(idSessione != null) {
@@ -293,9 +287,9 @@ public abstract class BaseRsService {
 				sb.append("\t").append("Id Transazione Autenticazione: [").append(authenticationDetails.getIdTransazioneAutenticazione()).append("]");
 				sb.append("\n");
 				sb.append("\t").append("ACL:").append("\n").append("\t\t[\n");
-				
+
 				List<Acl> aclsProfilo = utenza.getAclsProfilo();
-				
+
 				printAcl(sb, aclsProfilo);
 				sb.append("\t\t]\n");
 				sb.append("\t");
@@ -308,61 +302,80 @@ public abstract class BaseRsService {
 			sb.append("Query Params: [").append(this.uriInfo.getQueryParameters()).append("]");
 			sb.append("\n");
 			sb.append("Path Params: [").append(this.uriInfo.getPathParameters()).append("]");
-			this.log.debug(sb.toString());
+			this.logDebug(sb.toString());
 		}
 	}
-	
+
 	private String getPathFromRestMethod(String methodName) {
 
-        try {
-        	Class<?> c = this.getClass();
-        	// la versione V1 non implementa interfacce
-//        	Class<?> [] interfaces = c.getInterfaces();
-//        	if(interfaces==null || interfaces.length<=0) {
-//        		return null;
-//        	}
-//        	Class<?> cInterface = null;
-//        	for (int i = 0; i < interfaces.length; i++) {
-//        		if (interfaces[i] != null && interfaces[i].isAnnotationPresent(Path.class)) {
-//        			cInterface = interfaces[i];
-//        			break;
-//        		}
-//			}
-//        	if(cInterface==null) {
-//        		return null;
-//        	}
-//        	Method [] methods = cInterface.getMethods();
-        	
-        	String rsBasePathValue = "";
-        	Path rsBasePath = c.getAnnotation(Path.class);
-        	if(rsBasePath !=null) {
-        		rsBasePathValue = rsBasePath.value();
-        	}
-        	
-        	Method [] methods = c.getMethods();
-        	if(methods==null || methods.length<=0) {
-        		return null;
-        	}
-        	Method method = null;
-        	for (int i = 0; i < methods.length; i++) {
-        		if (methods[i] != null && methods[i].getName().equals(methodName) && methods[i].isAnnotationPresent(Path.class)) {
-        			method = methods[i];
-        			break;
-        		}
+		try {
+			Class<?> c = this.getClass();
+
+			String rsBasePathValue = "";
+			Path rsBasePath = c.getAnnotation(Path.class);
+			if(rsBasePath !=null) {
+				rsBasePathValue = rsBasePath.value();
 			}
-        	if(method==null) {
-        		return null;
-        	}
-        	Path path = method.getAnnotation(Path.class);
-        	if(path==null) {
-        		return null;
-        	}
-        	return rsBasePathValue + path.value();
-        } catch (Exception e) {
-            this.log.error(e.getMessage(),e);
-        }
 
-        return null;
-    }
+			Method [] methods = c.getMethods();
+			if(methods==null || methods.length<=0) {
+				return null;
+			}
+			Method method = null;
+			for (Method method2 : methods) {
+				if (method2 != null && method2.getName().equals(methodName) && method2.isAnnotationPresent(Path.class)) {
+					method = method2;
+					break;
+				}
+			}
+			if(method==null) {
+				return null;
+			}
+			Path path = method.getAnnotation(Path.class);
+			if(path==null) {
+				return null;
+			}
+			return rsBasePathValue + path.value();
+		} catch (Exception e) {
+			this.log.error(e.getMessage(),e);
+		}
+
+		return null;
+	}
+
+	protected void logDebugException(String msg, Exception e) {
+		LogUtils.logDebugException(this.log, msg, e);
+	}
+
+	protected void logDebug(String msg, Object ... params) {
+		LogUtils.logDebug(this.log, msg, params);
+	}
+
+	protected void logInfoException(String msg, Exception e) {
+		LogUtils.logInfoException(this.log, msg, e);
+	}
+
+	protected void logInfo(String msg, Object ... params) {
+		LogUtils.logInfo(this.log, msg, params);
+	}
+
+	protected void logWarnException(String msg, Exception e) {
+		LogUtils.logWarnException(this.log, msg, e);
+	}
+
+	protected void logWarn(String msg, Object ... params) {
+		LogUtils.logWarn(this.log, msg, params);
+	}
+
+	protected void logError(String msg) {
+		LogUtils.logError(this.log, msg);
+	}
+
+	protected void logError(String msg, Exception e) {
+		LogUtils.logError(this.log, msg, e);
+	}
+
+	protected void logTrace(String msg, Object ... params) {
+		LogUtils.logTrace(this.log, msg, params);
+	}
 }
-
