@@ -21,6 +21,8 @@ package it.govpay.core.utils;
 
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.util.LinkedHashMap;
@@ -30,19 +32,21 @@ import java.util.Map;
 
 public class UrlUtils {
 	
+	private UrlUtils() {}
+	
 	private static Map<String, List<String>> splitQuery(URL url) throws UnsupportedEncodingException {
-		final Map<String, List<String>> query_pairs = new LinkedHashMap<>();
+		final Map<String, List<String>> queryPairs = new LinkedHashMap<>();
 		final String[] pairs = url.getQuery().split("&");
 		for (String pair : pairs) {
 			final int idx = pair.indexOf("=");
 			final String key = idx > 0 ? URLDecoder.decode(pair.substring(0, idx), "UTF-8") : pair;
-			if (!query_pairs.containsKey(key)) {
-				query_pairs.put(key, new LinkedList<String>());
+			if (!queryPairs.containsKey(key)) {
+				queryPairs.put(key, new LinkedList<>());
 			}
 			final String value = idx > 0 && pair.length() > idx + 1 ? URLDecoder.decode(pair.substring(idx + 1), "UTF-8") : null;
-			query_pairs.get(key).add(value);
+			queryPairs.get(key).add(value);
 		}
-		return query_pairs;
+		return queryPairs;
 	}
 	
 	public static String getCodSessione(String urlString)  {
@@ -51,7 +55,7 @@ public class UrlUtils {
 	
 	public static String getParameter(String urlString,String parameterName)  {
 		try {
-		URL url = new URL(urlString);
+		URL url = new URI(urlString).toURL();
 		if(splitQuery(url).get(parameterName) != null)
 			return splitQuery(url).get(parameterName).get(0);
 		else
@@ -61,7 +65,7 @@ public class UrlUtils {
 		}
 	}
 	
-	public static URL addParameter(URL url, String paramName, String paramValue) throws MalformedURLException {
+	public static URL addParameter(URL url, String paramName, String paramValue) throws MalformedURLException, URISyntaxException {
 		String urlString = url.toString();
 		if(urlString.contains("?")) {
 			if(urlString.endsWith("&")) 
@@ -71,7 +75,7 @@ public class UrlUtils {
 		} else {
 			urlString = urlString + "?" + paramName + "=" + paramValue;
 		}
-		return new URL(urlString);
+		return new URI(urlString).toURL();
 	}
 	
 	public static String addParameter(String urlString, String paramName, String paramValue) {
