@@ -20,32 +20,25 @@
 package it.govpay.pendenze.v2.controller;
 
 import java.net.URLDecoder;
-import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.Status;
-import javax.ws.rs.core.UriInfo;
+import jakarta.ws.rs.core.HttpHeaders;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.ResponseBuilder;
+import jakarta.ws.rs.core.Response.Status;
+import jakarta.ws.rs.core.UriInfo;
 
 import org.apache.commons.lang3.ArrayUtils;
 import org.openspcoop2.generic_project.exception.NotFoundException;
 import org.openspcoop2.generic_project.exception.ServiceException;
-import it.govpay.core.exceptions.ValidationException;
 import org.openspcoop2.utils.service.context.ContextThreadLocal;
 import org.slf4j.Logger;
 import org.springframework.security.core.Authentication;
 
-import it.gov.digitpa.schemas._2011.pagamenti.CtRicevutaTelematica;
-import it.gov.digitpa.schemas._2011.pagamenti.CtRichiestaPagamentoTelematico;
-import it.gov.pagopa.pagopa_api.pa.pafornode.PaGetPaymentRes;
-import it.gov.pagopa.pagopa_api.pa.pafornode.PaGetPaymentV2Response;
-import it.gov.pagopa.pagopa_api.pa.pafornode.PaSendRTReq;
-import it.gov.pagopa.pagopa_api.pa.pafornode.PaSendRTV2Request;
 import it.govpay.bd.BDConfigWrapper;
 import it.govpay.bd.model.Rpt;
 import it.govpay.bd.model.Versamento;
@@ -62,6 +55,10 @@ import it.govpay.core.dao.pagamenti.dto.LeggiRptDTOResponse;
 import it.govpay.core.dao.pagamenti.dto.ListaRptDTO;
 import it.govpay.core.dao.pagamenti.dto.ListaRptDTOResponse;
 import it.govpay.core.exceptions.NotAuthorizedException;
+import it.govpay.core.exceptions.ValidationException;
+import it.govpay.core.utils.GovpayConfig;
+import it.govpay.core.utils.MessaggiPagoPARptUtils;
+import it.govpay.core.utils.MessaggiPagoPARtUtils;
 import it.govpay.core.utils.SimpleDateFormatUtils;
 import it.govpay.core.utils.validator.ValidatorFactory;
 import it.govpay.core.utils.validator.ValidatoreIdentificativi;
@@ -70,7 +67,7 @@ import it.govpay.model.Acl.Diritti;
 import it.govpay.model.Acl.Servizio;
 import it.govpay.model.Rpt.EsitoPagamento;
 import it.govpay.model.Utenza.TIPO_UTENZA;
-import it.govpay.pagopa.beans.utils.JaxbUtils;
+import it.govpay.pendenze.v1.controller.BaseController;
 import it.govpay.pendenze.v2.beans.EsitoRpp;
 import it.govpay.pendenze.v2.beans.ListaRpp;
 import it.govpay.pendenze.v2.beans.PendenzaIndex;
@@ -86,22 +83,22 @@ public class RppController extends BaseController {
 	}
 
 	public Response rppGET(Authentication user, UriInfo uriInfo, HttpHeaders httpHeaders , Integer pagina, Integer risultatiPerPagina, String ordinamento, String campi, String dataRptDa, String dataRptA, String dataRtDa, String dataRtA, String idDominio, String iuv, String ccp, String idA2A, String idPendenza, String idDebitore, String esitoPagamento, String idPagamento, Boolean metadatiPaginazione, Boolean maxRisultati) {
-		String methodName = "rppGET";  
+		String methodName = "rppGET";
 		String transactionId = ContextThreadLocal.get().getTransactionId();
-		this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_IN_CORSO, methodName)); 
+		this.logDebug(BaseController.LOG_MSG_ESECUZIONE_METODO_IN_CORSO, methodName);
 		try{
 			// autorizzazione sulla API
 			this.isAuthorized(user, Arrays.asList(TIPO_UTENZA.APPLICAZIONE), Arrays.asList(Servizio.API_PENDENZE), Arrays.asList(Diritti.LETTURA));
-						
+
 			ValidatorFactory vf = ValidatorFactory.newInstance();
 			ValidatoreUtils.validaRisultatiPerPagina(vf, Costanti.PARAMETRO_RISULTATI_PER_PAGINA, risultatiPerPagina);
-			
+
 			// Parametri - > DTO Input
 
 			ListaRptDTO listaRptDTO = new ListaRptDTO(user);
 			listaRptDTO.setLimit(risultatiPerPagina);
 			listaRptDTO.setPagina(pagina);
-			
+
 			ValidatoreIdentificativi validatoreId = ValidatoreIdentificativi.newInstance();
 
 			if(esitoPagamento != null) {
@@ -136,26 +133,26 @@ public class RppController extends BaseController {
 					throw new ValidationException("Codifica inesistente per esito. Valore fornito [" + esitoPagamento
 							+ "] valori possibili " + ArrayUtils.toString(EsitoRpp.values()));
 				}
-				
+
 				listaRptDTO.setEsitoPagamento(esitoPagamentoModel);
 			}
-			
+
 			if(idDominio != null) {
-				validatoreId.validaIdDominio("idDominio", idDominio);
+				validatoreId.validaIdDominio(Costanti.PARAM_ID_DOMINIO, idDominio);
 				listaRptDTO.setIdDominio(idDominio);
 			}
 			if(iuv != null)
 				listaRptDTO.setIuv(iuv);
 			if(ccp != null)
 				listaRptDTO.setCcp(ccp);
-			
+
 			if(idA2A != null) {
-				validatoreId.validaIdApplicazione("idA2A", idA2A);
+				validatoreId.validaIdApplicazione(Costanti.PARAM_ID_A2A, idA2A);
 				listaRptDTO.setIdA2A(idA2A);
 			}
-			
+
 			if(idPendenza != null) {
-				validatoreId.validaIdPendenza("idPendenza", idPendenza);
+				validatoreId.validaIdPendenza(Costanti.PARAM_ID_PENDENZA, idPendenza);
 				listaRptDTO.setIdPendenza(idPendenza);
 			}
 
@@ -164,41 +161,41 @@ public class RppController extends BaseController {
 
 			if(ordinamento != null)
 				listaRptDTO.setOrderBy(ordinamento);
-			
+
 			// dat RPT
 			if(dataRptDa!=null) {
-				Date dataDaDate = SimpleDateFormatUtils.getDataDaConTimestamp(dataRptDa, "dataRptDa");
+				Date dataDaDate = SimpleDateFormatUtils.getDataDaConTimestamp(dataRptDa, Costanti.PARAM_DATA_RPT_DA);
 				listaRptDTO.setDataDa(dataDaDate);
 			}
-			
+
 			if(dataRptA!=null) {
-				Date dataADate = SimpleDateFormatUtils.getDataAConTimestamp(dataRptA, "dataRptA");
+				Date dataADate = SimpleDateFormatUtils.getDataAConTimestamp(dataRptA, Costanti.PARAM_DATA_RPT_A);
 				listaRptDTO.setDataA(dataADate);
 			}
-			
+
 			// data RT
 			if(dataRtDa!=null) {
-				Date dataDaDate = SimpleDateFormatUtils.getDataDaConTimestamp(dataRtDa, "dataRtDa");
+				Date dataDaDate = SimpleDateFormatUtils.getDataDaConTimestamp(dataRtDa, Costanti.PARAM_DATA_RT_DA);
 				listaRptDTO.setDataRtDa(dataDaDate);
 			}
-				
-			
+
+
 			if(dataRtA!=null) {
-				Date dataADate = SimpleDateFormatUtils.getDataAConTimestamp(dataRtA, "dataRtA");
+				Date dataADate = SimpleDateFormatUtils.getDataAConTimestamp(dataRtA, Costanti.PARAM_DATA_RT_A);
 				listaRptDTO.setDataRtA(dataADate);
 			}
-			
+
 			listaRptDTO.setIdDebitore(idDebitore);
-			
+
 			// se sei una applicazione allora vedi i pagamenti che hai caricato
 			GovpayLdapUserDetails userDetails = AutorizzazioneUtils.getAuthenticationDetails(listaRptDTO.getUser());
 			if(userDetails.getTipoUtenza().equals(TIPO_UTENZA.APPLICAZIONE)) {
-				listaRptDTO.setIdA2A(userDetails.getApplicazione().getCodApplicazione()); 
+				listaRptDTO.setIdA2A(userDetails.getApplicazione().getCodApplicazione());
 			}
-			
+
 			listaRptDTO.setEseguiCount(metadatiPaginazione);
 			listaRptDTO.setEseguiCountConLimit(maxRisultati);
-			
+
 			RptDAO rptDAO = new RptDAO();
 
 			// CHIAMATA AL DAO
@@ -212,7 +209,7 @@ public class RppController extends BaseController {
 			}
 			ListaRpp response = new ListaRpp(results, this.getServicePath(uriInfo), listaRptDTOResponse.getTotalResults(), pagina, risultatiPerPagina);
 
-			this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName)); 
+			this.logDebug(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName);
 			return this.handleResponseOk(Response.status(Status.OK).entity(response.toJSON(campi)),transactionId).build();
 		}catch (Exception e) {
 			return this.handleException(uriInfo, httpHeaders, methodName, e, transactionId);
@@ -224,227 +221,165 @@ public class RppController extends BaseController {
 
 
 	public Response rppIdDominioIuvCcpRtGET(Authentication user, UriInfo uriInfo, HttpHeaders httpHeaders , String idDominio, String iuv, String ccp) {
-		String methodName = "rppIdDominioIuvCcpRtGET";  
+		String methodName = "rppIdDominioIuvCcpRtGET";
 		String transactionId = ContextThreadLocal.get().getTransactionId();
-		this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_IN_CORSO, methodName)); 
+		this.logDebug(BaseController.LOG_MSG_ESECUZIONE_METODO_IN_CORSO, methodName);
 
 		String accept = MediaType.APPLICATION_JSON;
-		if(httpHeaders.getRequestHeaders().containsKey("Accept")) {
-			accept = httpHeaders.getRequestHeaders().get("Accept").get(0).toLowerCase();
+		if(httpHeaders.getRequestHeaders().containsKey(Costanti.HEADER_NAME_ACCEPT)) {
+			accept = httpHeaders.getRequestHeaders().get(Costanti.HEADER_NAME_ACCEPT).get(0).toLowerCase();
 		}
 
 		try{
 			// autorizzazione sulla API
 			this.isAuthorized(user, Arrays.asList(TIPO_UTENZA.APPLICAZIONE), Arrays.asList(Servizio.API_PENDENZE), Arrays.asList(Diritti.LETTURA));
-						
+
 			ValidatoreIdentificativi validatoreId = ValidatoreIdentificativi.newInstance();
-			validatoreId.validaIdDominio("idDominio", idDominio);
+			validatoreId.validaIdDominio(Costanti.PARAM_ID_DOMINIO, idDominio);
 
 			LeggiRicevutaDTO leggiPagamentoPortaleDTO = new LeggiRicevutaDTO(user);
 			leggiPagamentoPortaleDTO.setIdDominio(idDominio);
 			leggiPagamentoPortaleDTO.setIuv(iuv);
-			ccp = ccp.contains("%") ? URLDecoder.decode(ccp,"UTF-8") : ccp;
+			ccp = ccp.contains("%") ? URLDecoder.decode(ccp, Costanti.CHARSET_UTF_8) : ccp;
 			leggiPagamentoPortaleDTO.setCcp(ccp);
-			
-			// controllo che il dominio sia autorizzato
-//			if(!AuthorizationManager.isDominioAuthorized(leggiPagamentoPortaleDTO.getUser(), idDominio)) {
-//				throw AuthorizationManager.toNotAuthorizedException(leggiPagamentoPortaleDTO.getUser(),idDominio, null);
-//			}
 
-			RptDAO ricevuteDAO = new RptDAO(); 
+			RptDAO ricevuteDAO = new RptDAO();
 
-			LeggiRicevutaDTOResponse ricevutaDTOResponse = null; 
+			LeggiRicevutaDTOResponse ricevutaDTOResponse = null;
+
+			boolean retrocompatibilitaMessaggiPagoPAV1 = GovpayConfig.getInstance().isConversioneMessaggiPagoPAV2NelFormatoV1();
+			String mediaType = null;
+			Object messaggioRT = null;
 
 			if(accept.toLowerCase().contains(MediaType.APPLICATION_OCTET_STREAM)) {
 				leggiPagamentoPortaleDTO.setFormato(FormatoRicevuta.RAW);
-				ricevutaDTOResponse = ricevuteDAO.leggiRt(leggiPagamentoPortaleDTO);
-				
-				checkAutorizzazioniUtenza(leggiPagamentoPortaleDTO.getUser(), ricevutaDTOResponse.getRpt());
-				
-//				// controllo che il dominio sia autorizzato
-//				if(!AuthorizationManager.isDominioAuthorized(user, ricevutaDTOResponse.getDominio().getCodDominio())) {
-//					throw AuthorizationManager.toNotAuthorizedException(user, ricevutaDTOResponse.getDominio().getCodDominio(), null);
-//				}
-//				
-				this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName)); 
-				return this.handleResponseOk(Response.status(Status.OK).type(MediaType.APPLICATION_OCTET_STREAM).entity(new String(ricevutaDTOResponse.getRpt().getXmlRt())),transactionId).build();
-			} else {
-				if(accept.toLowerCase().contains("application/pdf")) {
-					leggiPagamentoPortaleDTO.setFormato(FormatoRicevuta.PDF);
-					ricevutaDTOResponse = ricevuteDAO.leggiRt(leggiPagamentoPortaleDTO);
-					String rtPdfEntryName = idDominio +"_"+ iuv + "_"+ ccp + ".pdf";
-					byte[] b = ricevutaDTOResponse.getPdf(); 
-					
-					checkAutorizzazioniUtenza(leggiPagamentoPortaleDTO.getUser(), ricevutaDTOResponse.getRpt());
-					
-//					// controllo che il dominio sia autorizzato
-//					if(!AuthorizationManager.isDominioAuthorized(user, ricevutaDTOResponse.getDominio().getCodDominio())) {
-//						throw AuthorizationManager.toNotAuthorizedException(user, ricevutaDTOResponse.getDominio().getCodDominio(), null);
-//					}
-
-					this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName)); 
-					return this.handleResponseOk(Response.status(Status.OK).type("application/pdf").entity(b).header("content-disposition", "attachment; filename=\""+rtPdfEntryName+"\""),transactionId).build();
-				} else if(accept.toLowerCase().contains(MediaType.APPLICATION_JSON)) {
-					leggiPagamentoPortaleDTO.setFormato(FormatoRicevuta.JSON);
-					ricevutaDTOResponse = ricevuteDAO.leggiRt(leggiPagamentoPortaleDTO);
-					
-					checkAutorizzazioniUtenza(leggiPagamentoPortaleDTO.getUser(), ricevutaDTOResponse.getRpt());
-					
-//					// controllo che il dominio sia autorizzato
-//					if(!AuthorizationManager.isDominioAuthorized(user, ricevutaDTOResponse.getDominio().getCodDominio())) {
-//						throw AuthorizationManager.toNotAuthorizedException(user, ricevutaDTOResponse.getDominio().getCodDominio(), null);
-//					}
-					
-					switch (ricevutaDTOResponse.getRpt().getVersione()) {
-						case SANP_230:
-							CtRicevutaTelematica rt = JaxbUtils.toRT(ricevutaDTOResponse.getRpt().getXmlRt(), false);
-							this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName)); 
-							return this.handleResponseOk(Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(rt),transactionId).build();
-						case SANP_240:
-						case RPTV2_RTV1:
-							PaSendRTReq paSendRTReq = JaxbUtils.toPaSendRTReq_RT(ricevutaDTOResponse.getRpt().getXmlRt(), false);
-							this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName)); 
-							return this.handleResponseOk(Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(paSendRTReq.getReceipt()),transactionId).build();
-						case SANP_321_V2:
-						case RPTV1_RTV2:
-							PaSendRTV2Request paSendRTV2Request = JaxbUtils.toPaSendRTV2Request_RT(ricevutaDTOResponse.getRpt().getXmlRt(), false);
-							this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName)); 
-							return this.handleResponseOk(Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(paSendRTV2Request.getReceipt()),transactionId).build();
-					}
-					
-					CtRicevutaTelematica rt = JaxbUtils.toRT(ricevutaDTOResponse.getRpt().getXmlRt(), false);
-					this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName)); 
-					return this.handleResponseOk(Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(rt),transactionId).build();
-				} else {
-					leggiPagamentoPortaleDTO.setFormato(FormatoRicevuta.XML);
-					ricevutaDTOResponse = ricevuteDAO.leggiRt(leggiPagamentoPortaleDTO);
-					
-					checkAutorizzazioniUtenza(leggiPagamentoPortaleDTO.getUser(), ricevutaDTOResponse.getRpt());
-					
-//					// controllo che il dominio sia autorizzato
-//					if(!AuthorizationManager.isDominioAuthorized(user, ricevutaDTOResponse.getDominio().getCodDominio())) {
-//						throw AuthorizationManager.toNotAuthorizedException(user, ricevutaDTOResponse.getDominio().getCodDominio(), null);
-//					}
-					this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName)); 
-					return this.handleResponseOk(Response.status(Status.OK).type(MediaType.TEXT_XML).entity(ricevutaDTOResponse.getRpt().getXmlRt()),transactionId).build();
-				}
+				mediaType = MediaType.APPLICATION_OCTET_STREAM;
+			} else if(accept.toLowerCase().contains(Costanti.MEDIA_TYPE_APPLICATION_PDF)) {
+				leggiPagamentoPortaleDTO.setFormato(FormatoRicevuta.PDF);
+				mediaType = Costanti.MEDIA_TYPE_APPLICATION_PDF;
+			} else if(accept.toLowerCase().contains(MediaType.APPLICATION_JSON)) {
+				leggiPagamentoPortaleDTO.setFormato(FormatoRicevuta.JSON);
+				mediaType = MediaType.APPLICATION_JSON;
+			} else { //XML
+				leggiPagamentoPortaleDTO.setFormato(FormatoRicevuta.XML);
+				mediaType = MediaType.TEXT_XML;
 			}
+
+			// lettura della RT uguale per tutte le casistiche
+			ricevutaDTOResponse = ricevuteDAO.leggiRt(leggiPagamentoPortaleDTO);
+
+			checkAutorizzazioniUtenza(leggiPagamentoPortaleDTO.getUser(), ricevutaDTOResponse.getRpt());
+
+			Rpt rpt = ricevutaDTOResponse.getRpt();
+			String rtPdfEntryName = null;
+			if(accept.toLowerCase().contains(MediaType.APPLICATION_OCTET_STREAM)) {
+				messaggioRT = new String(ricevutaDTOResponse.getRpt().getXmlRt());
+			} else if(accept.toLowerCase().contains(Costanti.MEDIA_TYPE_APPLICATION_PDF)) {
+				messaggioRT = ricevutaDTOResponse.getPdf();
+				rtPdfEntryName = idDominio +"_"+ iuv + "_"+ ccp + ".pdf";
+			} else if(accept.toLowerCase().contains(MediaType.APPLICATION_JSON)) {
+				messaggioRT = MessaggiPagoPARtUtils.getMessaggioRT(rpt, FormatoRicevuta.JSON, retrocompatibilitaMessaggiPagoPAV1);
+			} else { //XML
+				messaggioRT = MessaggiPagoPARtUtils.getMessaggioRT(rpt, FormatoRicevuta.XML, retrocompatibilitaMessaggiPagoPAV1);
+			}
+
+			ResponseBuilder entity = Response.status(Status.OK).type(mediaType).entity(messaggioRT);
+
+			if(accept.toLowerCase().contains(Costanti.MEDIA_TYPE_APPLICATION_PDF)) {
+				entity.header(Costanti.HEADER_NAME_CONTENT_DISPOSITION, "attachment; filename=\""+rtPdfEntryName+"\"");
+			}
+
+			this.logDebug(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName);
+			return this.handleResponseOk(entity,transactionId).build();
+
 		}catch (Exception e) {
 			return this.handleException(uriInfo, httpHeaders, methodName, e, transactionId);
 		} finally {
 			this.logContext(ContextThreadLocal.get());
-		}    
+		}
 	}
 
 
 
 	public Response rppIdDominioIuvCcpRptGET(Authentication user, UriInfo uriInfo, HttpHeaders httpHeaders , String idDominio, String iuv, String ccp) {
-		String methodName = "rppIdDominioIuvCcpRtGET";  
+		String methodName = "rppIdDominioIuvCcpRtGET";
 		String transactionId = ContextThreadLocal.get().getTransactionId();
-		this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_IN_CORSO, methodName)); 
+		this.logDebug(BaseController.LOG_MSG_ESECUZIONE_METODO_IN_CORSO, methodName);
 		try{
 			String accept = MediaType.APPLICATION_JSON;
-			if(httpHeaders.getRequestHeaders().containsKey("Accept")) {
-				accept = httpHeaders.getRequestHeaders().get("Accept").get(0).toLowerCase();
+			if(httpHeaders.getRequestHeaders().containsKey(Costanti.HEADER_NAME_ACCEPT)) {
+				accept = httpHeaders.getRequestHeaders().get(Costanti.HEADER_NAME_ACCEPT).get(0).toLowerCase();
 			}
 			// autorizzazione sulla API
 			this.isAuthorized(user, Arrays.asList(TIPO_UTENZA.APPLICAZIONE), Arrays.asList(Servizio.API_PENDENZE), Arrays.asList(Diritti.LETTURA));
-			
+
 			ValidatoreIdentificativi validatoreId = ValidatoreIdentificativi.newInstance();
-			validatoreId.validaIdDominio("idDominio", idDominio);
+			validatoreId.validaIdDominio(Costanti.PARAM_ID_DOMINIO, idDominio);
 
 			LeggiRptDTO leggiRptDTO = new LeggiRptDTO(user);
 			leggiRptDTO.setIdDominio(idDominio);
 			leggiRptDTO.setIuv(iuv);
-			ccp = ccp.contains("%") ? URLDecoder.decode(ccp,"UTF-8") : ccp;
+			ccp = ccp.contains("%") ? URLDecoder.decode(ccp,Costanti.CHARSET_UTF_8) : ccp;
 			leggiRptDTO.setCcp(ccp);
-			
-			// controllo che il dominio sia autorizzato
-//			if(!AuthorizationManager.isDominioAuthorized(leggiRptDTO.getUser(), idDominio)) {
-//				throw AuthorizationManager.toNotAuthorizedException(leggiRptDTO.getUser(),idDominio, null);
-//			}
 
-			RptDAO ricevuteDAO = new RptDAO(); 
+			RptDAO ricevuteDAO = new RptDAO();
 
 			LeggiRptDTOResponse leggiRptDTOResponse = ricevuteDAO.leggiRpt(leggiRptDTO);
-			
-			checkAutorizzazioniUtenza(leggiRptDTO.getUser(), leggiRptDTOResponse.getRpt());
-			
-			// controllo che il dominio sia autorizzato
-//			if(!AuthorizationManager.isDominioAuthorized(user, leggiRptDTOResponse.getDominio().getCodDominio())) {
-//				throw AuthorizationManager.toNotAuthorizedException(user, leggiRptDTOResponse.getDominio().getCodDominio(), null);
-//			}
 
+			checkAutorizzazioniUtenza(leggiRptDTO.getUser(), leggiRptDTOResponse.getRpt());
+
+			boolean retrocompatibilitaMessaggiPagoPAV1 = GovpayConfig.getInstance().isConversioneMessaggiPagoPAV2NelFormatoV1();
+			String mediaType = null;
+			Object messaggioRPT = null;
 			if(accept.toLowerCase().contains(MediaType.APPLICATION_JSON)) {
-				switch (leggiRptDTOResponse.getRpt().getVersione()) {
-				case SANP_230:
-					CtRichiestaPagamentoTelematico rpt = JaxbUtils.toRPT(leggiRptDTOResponse.getRpt().getXmlRpt(), false);
-					return this.handleResponseOk(Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(rpt),transactionId).build();
-				case SANP_240:
-				case RPTV1_RTV2:
-					PaGetPaymentRes paGetPaymentRes = JaxbUtils.toPaGetPaymentRes_RPT(leggiRptDTOResponse.getRpt().getXmlRpt(), false);
-					return this.handleResponseOk(Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(paGetPaymentRes.getData()),transactionId).build();
-				case SANP_321_V2:
-				case RPTV2_RTV1:
-					PaGetPaymentV2Response paGetPaymentV2Response = JaxbUtils.toPaGetPaymentV2Response_RPT(leggiRptDTOResponse.getRpt().getXmlRpt(), false);
-					return this.handleResponseOk(Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(paGetPaymentV2Response.getData()),transactionId).build();
-				}
-				
-				
-				CtRichiestaPagamentoTelematico rpt = JaxbUtils.toRPT(leggiRptDTOResponse.getRpt().getXmlRpt(), false);
-				return this.handleResponseOk(Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(rpt),transactionId).build();
-			}else {
-				return this.handleResponseOk(Response.status(Status.OK).type(MediaType.TEXT_XML).entity(leggiRptDTOResponse.getRpt().getXmlRpt()),transactionId).build();
+				mediaType = MediaType.APPLICATION_JSON;
+				messaggioRPT = MessaggiPagoPARptUtils.getMessaggioRPT(leggiRptDTOResponse.getRpt(), FormatoRicevuta.JSON, retrocompatibilitaMessaggiPagoPAV1);
+			} else {
+				mediaType = MediaType.TEXT_XML;
+				messaggioRPT = MessaggiPagoPARptUtils.getMessaggioRPT(leggiRptDTOResponse.getRpt(), FormatoRicevuta.XML, retrocompatibilitaMessaggiPagoPAV1);
 			}
+
+			this.logDebug(BaseController.LOG_MSG_ESECUZIONE_METODO_COMPLETATA, methodName);
+			return this.handleResponseOk(Response.status(Status.OK).type(mediaType).entity(messaggioRPT),transactionId).build();
 		}catch (Exception e) {
 			return this.handleException(uriInfo, httpHeaders, methodName, e, transactionId);
 		} finally {
 			this.logContext(ContextThreadLocal.get());
-		} 
+		}
 	}
 
 
 
 	public Response rppIdDominioIuvCcpGET(Authentication user, UriInfo uriInfo, HttpHeaders httpHeaders , String idDominio, String iuv, String ccp) {
-		String methodName = "rppIdDominioIuvCcpGET";  
-		String transactionId = ContextThreadLocal.get().getTransactionId();		
-		this.log.debug(MessageFormat.format(BaseController.LOG_MSG_ESECUZIONE_METODO_IN_CORSO, methodName)); 
+		String methodName = "rppIdDominioIuvCcpGET";
+		String transactionId = ContextThreadLocal.get().getTransactionId();
+		this.logDebug(BaseController.LOG_MSG_ESECUZIONE_METODO_IN_CORSO, methodName);
 
 		try{
 			// autorizzazione sulla API
 			this.isAuthorized(user, Arrays.asList(TIPO_UTENZA.APPLICAZIONE), Arrays.asList(Servizio.API_PENDENZE), Arrays.asList(Diritti.LETTURA));
-			
+
 			ValidatoreIdentificativi validatoreId = ValidatoreIdentificativi.newInstance();
-			validatoreId.validaIdDominio("idDominio", idDominio);
+			validatoreId.validaIdDominio(Costanti.PARAM_ID_DOMINIO, idDominio);
 
 			LeggiRptDTO leggiRptDTO = new LeggiRptDTO(user);
 			leggiRptDTO.setIdDominio(idDominio);
 			leggiRptDTO.setIuv(iuv);
-			ccp = ccp.contains("%") ? URLDecoder.decode(ccp,"UTF-8") : ccp;
+			ccp = ccp.contains("%") ? URLDecoder.decode(ccp, Costanti.CHARSET_UTF_8) : ccp;
 			leggiRptDTO.setCcp(ccp);
-			
-//			// controllo che il dominio sia autorizzato
-//			if(!AuthorizationManager.isDominioAuthorized(leggiRptDTO.getUser(), idDominio)) {
-//				throw AuthorizationManager.toNotAuthorizedException(leggiRptDTO.getUser(),idDominio, null);
-//			}
 
-			RptDAO ricevuteDAO = new RptDAO(); 
+			RptDAO ricevuteDAO = new RptDAO();
 
 			LeggiRptDTOResponse leggiRptDTOResponse = ricevuteDAO.leggiRpt(leggiRptDTO);
-			
+
 			checkAutorizzazioniUtenza(leggiRptDTO.getUser(), leggiRptDTOResponse.getRpt());
 
-//			// controllo che il dominio sia autorizzato
-//			if(!AuthorizationManager.isDominioAuthorized(user, leggiRptDTOResponse.getDominio().getCodDominio())) {
-//				throw AuthorizationManager.toNotAuthorizedException(user, leggiRptDTOResponse.getDominio().getCodDominio(), null);
-//			}
-
 			Rpp response =  RptConverter.toRsModel(leggiRptDTOResponse.getRpt(),leggiRptDTOResponse.getVersamento(),leggiRptDTOResponse.getApplicazione());
-			
+
 			PendenzaIndex pendenza = PendenzeConverter.toRsIndexModel(leggiRptDTOResponse.getVersamento());
-			
+
 			response.setPendenza(pendenza);
-			
+
 			return this.handleResponseOk(Response.status(Status.OK).entity(response.toJSON(null)),transactionId).build();
 		}catch (Exception e) {
 			return this.handleException(uriInfo, httpHeaders, methodName, e, transactionId);
@@ -453,21 +388,19 @@ public class RppController extends BaseController {
 		}
 	}
 
-	private void checkAutorizzazioniUtenza(Authentication user, Rpt rpt) throws ServiceException, NotFoundException, NotAuthorizedException {
+	private void checkAutorizzazioniUtenza(Authentication user, Rpt rpt) throws ServiceException, NotAuthorizedException {
 		GovpayLdapUserDetails details = AutorizzazioneUtils.getAuthenticationDetails(user);
-		
+
 		// se sei una applicazione allora vedi i pagamenti che hai caricato
 		if(details.getTipoUtenza().equals(TIPO_UTENZA.APPLICAZIONE)) {
-			
+
 			Versamento versamento = rpt.getVersamento();
 			BDConfigWrapper configWrapper = new BDConfigWrapper(ContextThreadLocal.get().getTransactionId(), true);
-			
-			if(versamento.getApplicazione(configWrapper) == null || 
+
+			if(versamento.getApplicazione(configWrapper) == null ||
 					!versamento.getApplicazione(configWrapper).getCodApplicazione().equals(details.getApplicazione().getCodApplicazione())) {
 				throw AuthorizationManager.toNotAuthorizedException(user, "la transazione riferisce una pendenza che non appartiene all'applicazione chiamante");
 			}
 		}
 	}
 }
-
-
