@@ -23,19 +23,6 @@ import java.lang.reflect.Method;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
-import javax.ws.rs.Path;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.ResponseBuilder;
-import javax.ws.rs.core.Response.Status;
-import javax.ws.rs.core.UriInfo;
 
 import org.openspcoop2.utils.LoggerWrapperFactory;
 import org.openspcoop2.utils.service.context.ContextThreadLocal;
@@ -57,6 +44,7 @@ import it.govpay.core.beans.EsitoOperazione;
 import it.govpay.core.beans.EventoContext.Categoria;
 import it.govpay.core.beans.EventoContext.Esito;
 import it.govpay.core.beans.commons.Dominio;
+import it.govpay.core.beans.commons.Dominio.Uo;
 import it.govpay.core.dao.anagrafica.UtentiDAO;
 import it.govpay.core.dao.commons.exception.RedirectException;
 import it.govpay.core.exceptions.BaseExceptionV1;
@@ -68,24 +56,37 @@ import it.govpay.core.exceptions.NotAuthorizedException;
 import it.govpay.core.exceptions.UnprocessableEntityException;
 import it.govpay.core.exceptions.ValidationException;
 import it.govpay.core.utils.GpContext;
+import it.govpay.core.utils.LogUtils;
 import it.govpay.core.utils.UriBuilderUtils;
 import it.govpay.model.Acl.Diritti;
 import it.govpay.model.Acl.Servizio;
 import it.govpay.model.Utenza.TIPO_UTENZA;
 import it.govpay.ragioneria.v3.beans.FaultBean;
 import it.govpay.ragioneria.v3.beans.FaultBean.CategoriaEnum;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.HttpHeaders;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.ResponseBuilder;
+import jakarta.ws.rs.core.Response.Status;
+import jakarta.ws.rs.core.UriInfo;
 
 public class BaseApiServiceImpl {
 
-	public final static String PARAMETRO_CONTENT_DISPOSITION = "Content-Disposition";
-	public final static String PREFIX_CONTENT_DISPOSITION = "form-data; name=\"";
-	public final static String SUFFIX_CONTENT_DISPOSITION = "\"";
-	public final static String PREFIX_FILENAME = "filename=\"";
-	public final static String SUFFIX_FILENAME = "\"";
+	private static final String RICHIESTA_NON_VALIDA = "Richiesta non valida";
+	public static final String PARAMETRO_CONTENT_DISPOSITION = "Content-Disposition";
+	public static final String PREFIX_CONTENT_DISPOSITION = "form-data; name=\"";
+	public static final String SUFFIX_CONTENT_DISPOSITION = "\"";
+	public static final String PREFIX_FILENAME = "filename=\"";
+	public static final String SUFFIX_FILENAME = "\"";
 
 	public static final String ERRORE_DURANTE_LA_SERIALIZZAZIONE_DEL_FAULT_BEAN = "Errore durante la serializzazione del FaultBean";
-	public static final String LOG_MSG_ESECUZIONE_METODO_COMPLETATA = "Esecuzione {0} completata.";
-	public static final String LOG_MSG_ESECUZIONE_METODO_IN_CORSO = "Esecuzione {0} in corso...";
+	public static final String LOG_MSG_ESECUZIONE_METODO_COMPLETATA = "Esecuzione {} completata.";
+	public static final String LOG_MSG_ESECUZIONE_METODO_IN_CORSO = "Esecuzione {} in corso...";
 
 	protected String transactionIdHeaderName = Costanti.HEADER_NAME_OUTPUT_TRANSACTION_ID;
 
@@ -136,19 +137,15 @@ public class BaseApiServiceImpl {
 	}
 
 	protected Response getUnauthorizedResponse(){
-		Response res =	Response.status(Response.Status.UNAUTHORIZED)
+		return Response.status(Response.Status.UNAUTHORIZED)
 				.header("Access-Control-Allow-Origin", "*")
 				.build();
-
-		return res;
 	}
 
 	protected Response getForbiddenResponse(){
-		Response res =	Response.status(Response.Status.FORBIDDEN)
+		return Response.status(Response.Status.FORBIDDEN)
 				.header("Access-Control-Allow-Origin", "*")
 				.build();
-
-		return res;
 	}
 
 	public void invalidateSession(Logger log){
@@ -173,12 +170,11 @@ public class BaseApiServiceImpl {
 
 	protected IContext getContext() {
 		IContext context = ContextThreadLocal.get();
-		//System.out.println("SYNC:   " + Thread.currentThread().getId() + " " + context.getTransactionId() + " " + context.toString() );
-		if(context instanceof org.openspcoop2.utils.service.context.Context) {
-			((org.openspcoop2.utils.service.context.Context)context).update(this.request, this.response, this.uriInfo, 2, this.log);
-			((org.openspcoop2.utils.service.context.Context)context).setRestPath(this.getPathFromRestMethod(context.getMethodName()));
+		if(context instanceof org.openspcoop2.utils.service.context.Context op2Context) {
+			op2Context.update(this.request, this.response, this.uriInfo, 2, this.log);
+			op2Context.setRestPath(this.getPathFromRestMethod(context.getMethodName()));
 
-			GpContext ctx = (GpContext) ((org.openspcoop2.utils.service.context.Context)context).getApplicationContext();
+			GpContext ctx = (GpContext) op2Context.getApplicationContext();
 			ctx.getEventoCtx().setCategoriaEvento(Categoria.INTERFACCIA);
 			ctx.getEventoCtx().setMethod(this.request.getMethod());
 			ctx.getEventoCtx().setTipoEvento(context.getMethodName());
@@ -187,8 +183,7 @@ public class BaseApiServiceImpl {
 			if(authenticationDetails != null) {
 				Utenza utenza = authenticationDetails.getUtenza();
 				switch(utenza.getTipoUtenza()) {
-				case CITTADINO:
-				case ANONIMO:
+				case CITTADINO, ANONIMO:
 					ctx.getEventoCtx().setUtente(authenticationDetails.getIdentificativo());
 					break;
 				case APPLICAZIONE:
@@ -199,11 +194,10 @@ public class BaseApiServiceImpl {
 					break;
 				}
 			}
-			String baseUri = request.getRequestURI(); // uriInfo.getBaseUri().toString();
+			String baseUri = request.getRequestURI();
 			String requestUri = uriInfo.getRequestUri().toString();
 			int idxOfBaseUri = requestUri.indexOf(baseUri);
 
-//			String servicePathwithParameters = requestUri.substring((idxOfBaseUri + baseUri.length()) - 1);
 			String servicePathwithParameters = requestUri.substring(idxOfBaseUri);
 			ctx.getEventoCtx().setUrl(servicePathwithParameters);
 
@@ -246,7 +240,7 @@ public class BaseApiServiceImpl {
 							sb.append("\t\t");
 
 							sb.append(dominio.getCodDominio()).append(", UO: [").append((dominio.getUo() != null ? (
-									dominio.getUo().stream().map(d -> d.getCodUo()).collect(Collectors.toList())
+									dominio.getUo().stream().map(Uo::getCodUo).toList()
 									) : "Tutte")).append("]");
 						}
 						sb.append("\t");
@@ -266,18 +260,18 @@ public class BaseApiServiceImpl {
 			sb.append("Query Params: [").append(this.uriInfo.getQueryParameters()).append("]");
 			sb.append("\n");
 			sb.append("Path Params: [").append(this.uriInfo.getPathParameters()).append("]");
-			this.log.debug(sb.toString());
+			this.logDebug(sb.toString());
 		}
 		return context;
 	}
 
 	protected void buildContext() {
 		IContext context = ContextThreadLocal.get();
-		if(context instanceof org.openspcoop2.utils.service.context.Context) {
-			((org.openspcoop2.utils.service.context.Context)context).update(this.request, this.response, this.uriInfo, 2, this.log);
-			((org.openspcoop2.utils.service.context.Context)context).setRestPath(this.getPathFromRestMethod(context.getMethodName()));
+		if(context instanceof org.openspcoop2.utils.service.context.Context op2Context) {
+			op2Context.update(this.request, this.response, this.uriInfo, 2, this.log);
+			op2Context.setRestPath(this.getPathFromRestMethod(context.getMethodName()));
 
-			GpContext ctx = (GpContext) ((org.openspcoop2.utils.service.context.Context)context).getApplicationContext();
+			GpContext ctx = (GpContext) op2Context.getApplicationContext();
 			ctx.getEventoCtx().setCategoriaEvento(Categoria.INTERFACCIA);
 			ctx.getEventoCtx().setMethod(this.request.getMethod());
 			ctx.getEventoCtx().setTipoEvento(context.getMethodName());
@@ -286,8 +280,7 @@ public class BaseApiServiceImpl {
 			if(authenticationDetails != null) {
 				Utenza utenza = authenticationDetails.getUtenza();
 				switch(utenza.getTipoUtenza()) {
-				case CITTADINO:
-				case ANONIMO:
+				case CITTADINO, ANONIMO:
 					ctx.getEventoCtx().setUtente(authenticationDetails.getIdentificativo());
 					break;
 				case APPLICAZIONE:
@@ -298,11 +291,10 @@ public class BaseApiServiceImpl {
 					break;
 				}
 			}
-			String baseUri = request.getRequestURI(); // uriInfo.getBaseUri().toString();
+			String baseUri = request.getRequestURI();
 			String requestUri = uriInfo.getRequestUri().toString();
 			int idxOfBaseUri = requestUri.indexOf(baseUri);
 
-//			String servicePathwithParameters = requestUri.substring((idxOfBaseUri + baseUri.length()) - 1);
 			String servicePathwithParameters = requestUri.substring(idxOfBaseUri);
 			ctx.getEventoCtx().setUrl(servicePathwithParameters);
 
@@ -345,7 +337,7 @@ public class BaseApiServiceImpl {
 							sb.append("\t\t");
 
 							sb.append(dominio.getCodDominio()).append(", UO: [").append((dominio.getUo() != null ? (
-									dominio.getUo().stream().map(d -> d.getCodUo()).collect(Collectors.toList())
+									dominio.getUo().stream().map(Uo::getCodUo).toList()
 									) : "Tutte")).append("]");
 						}
 						sb.append("\t");
@@ -365,7 +357,7 @@ public class BaseApiServiceImpl {
 			sb.append("Query Params: [").append(this.uriInfo.getQueryParameters()).append("]");
 			sb.append("\n");
 			sb.append("Path Params: [").append(this.uriInfo.getPathParameters()).append("]");
-			this.log.debug(sb.toString());
+			this.logDebug(sb.toString());
 		}
 	}
 
@@ -391,12 +383,6 @@ public class BaseApiServiceImpl {
         	Method [] methods = cInterface.getMethods();
 
         	String rsBasePathValue = "";
-//        	Path rsBasePath = c.getAnnotation(Path.class);
-//        	if(rsBasePath !=null) {
-//        		rsBasePathValue = rsBasePath.value();
-//        	}
-
-//        	Method [] methods = c.getMethods();
         	if(methods==null || methods.length<=0) {
         		return null;
         	}
@@ -416,7 +402,7 @@ public class BaseApiServiceImpl {
         	}
         	return rsBasePathValue + path.value();
         } catch (Exception e) {
-            this.log.error(e.getMessage(),e);
+            this.logError(e.getMessage(),e);
         }
 
         return null;
@@ -444,7 +430,7 @@ public class BaseApiServiceImpl {
 			return new URI(baseUri);
 		}
 	}
-	
+
 	public URI getServicePathConURIAssoluta(UriInfo uriInfo, HttpHeaders httpHeaders) throws URISyntaxException {
 		return UriBuilderUtils.getServicePathConURIAssoluta(log, uriInfo, httpHeaders);
 	}
@@ -464,37 +450,37 @@ public class BaseApiServiceImpl {
 			return responseBuilder;
 	}
 
-	protected Response handleException(UriInfo uriInfo, HttpHeaders httpHeaders, String methodName, Exception e, String transactionId) {
+	protected Response handleException(String methodName, Exception e, String transactionId) {
 
-		if(e instanceof UnprocessableEntityException) {
-			return this.handleUnprocessableEntityException(uriInfo, httpHeaders, methodName, (UnprocessableEntityException)e,transactionId);
+		if(e instanceof UnprocessableEntityException unprocessEntityException) {
+			return this.handleUnprocessableEntityException(methodName, unprocessEntityException,transactionId);
 		}
 
-		if(e instanceof IncassiException) {
-			return this.handleIncassiException(uriInfo, httpHeaders, methodName, (IncassiException)e,transactionId);
+		if(e instanceof IncassiException incassiException) {
+			return this.handleIncassiException(methodName, incassiException,transactionId);
 		}
 
-		if(e instanceof BaseExceptionV1) {
-			return this.handleBaseException(uriInfo, httpHeaders, methodName, (BaseExceptionV1)e,transactionId);
+		if(e instanceof BaseExceptionV1 baseExceptionV1) {
+			return this.handleBaseException(methodName, baseExceptionV1,transactionId);
 		}
 
-		if(e instanceof RedirectException) {
-			return this.handleRedirectException(uriInfo, httpHeaders, methodName, (RedirectException)e,transactionId);
+		if(e instanceof RedirectException redirectException) {
+			return this.handleRedirectException(methodName, redirectException,transactionId);
 		}
 
-		if(e instanceof GovPayException) {
-			return this.handleGovpayException(uriInfo, httpHeaders, methodName, (GovPayException)e,transactionId);
+		if(e instanceof GovPayException govPayException) {
+			return this.handleGovpayException(methodName, govPayException,transactionId);
 		}
 
-		if(e instanceof ValidationException) {
-			return this.handleValidationException(uriInfo, httpHeaders, methodName, (ValidationException)e,transactionId);
+		if(e instanceof ValidationException validationException) {
+			return this.handleValidationException(validationException,transactionId);
 		}
 
-		if(e instanceof IOException) {
-			return this.handleIOException(uriInfo, httpHeaders, methodName, (IOException)e,transactionId);
+		if(e instanceof IOException ioException) {
+			return this.handleIOException(ioException,transactionId);
 		}
 
-		this.log.error("Errore interno durante "+methodName+": " + e.getMessage(), e);
+		this.logError("Errore interno durante "+methodName+": " + e.getMessage(), e);
 		FaultBean respKo = new FaultBean();
 		respKo.setCategoria(CategoriaEnum.INTERNO);
 		respKo.setCodice(EsitoOperazione.INTERNAL.toString());
@@ -506,7 +492,7 @@ public class BaseApiServiceImpl {
 		return handleResponseKo(responseBuilder, transactionId).build();
 	}
 
-	private Response handleBaseException(UriInfo uriInfo, HttpHeaders httpHeaders, String methodName, BaseExceptionV1 e, String transactionId) {
+	private Response handleBaseException(String methodName, BaseExceptionV1 e, String transactionId) {
 		FaultBean respKo = new FaultBean();
 		respKo.setCategoria(FaultBean.CategoriaEnum.fromValue(e.getCategoria().name()));
 		respKo.setCodice(e.getCode());
@@ -515,13 +501,12 @@ public class BaseApiServiceImpl {
 
 		String sottotipoEsito = respKo.getCodice();
 		if(e instanceof NotAuthenticatedException || e instanceof NotAuthorizedException) {
-			this.log.info("Accesso alla risorsa "+methodName+" non consentito: "+ e.getMessage() + ", " + e.getDetails());
+			this.logInfo("Accesso alla risorsa "+methodName+" non consentito: "+ e.getMessage() + ", " + e.getDetails());
 			sottotipoEsito = CategoriaEnum.AUTORIZZAZIONE.name();
 		} else {
-			this.log.info("Errore ("+e.getClass().getSimpleName()+") durante "+methodName+": "+ e.getMessage());
+			this.logInfo("Errore ("+e.getClass().getSimpleName()+") durante "+methodName+": "+ e.getMessage());
 		}
 
-//		String respJson = this.getRespJson(respKo);
 		ResponseBuilder responseBuilder = Response.status(e.getTransportErrorCode()).type(MediaType.APPLICATION_JSON).entity(respKo);
 		if(e.getTransportErrorCode() > 499)
 			this.handleEventoFail(responseBuilder, transactionId, sottotipoEsito, respKo.getDettaglio(), e);
@@ -530,14 +515,13 @@ public class BaseApiServiceImpl {
 		return handleResponseKo(responseBuilder, transactionId).build();
 	}
 
-	private Response handleGovpayException(UriInfo uriInfo, HttpHeaders httpHeaders, String methodName, GovPayException e, String transactionId) {
+	private Response handleGovpayException(String methodName, GovPayException e, String transactionId) {
 		switch (e.getStatusCode()) {
-		case 200: 
-		case 422: // richieste che non passano la validazione semantica
-			this.log.info("Rilevata GovPayException durante l'esecuzione del metodo: "+methodName+", causa: "+ e.getCausa() + ", messaggio: " + e.getMessageV3());
+		case 200, 422: // richieste che non passano la validazione semantica
+			this.logInfo("Rilevata GovPayException durante l'esecuzione del metodo: "+methodName+", causa: "+ e.getCausa() + ", messaggio: " + e.getMessageV3());
 			break;
 		default:
-			this.log.error("Rilevata GovPayException durante l'esecuzione del metodo: "+methodName+", causa: "+ e.getCausa() + ", messaggio: " + e.getMessageV3(), e);
+			this.logError("Rilevata GovPayException durante l'esecuzione del metodo: "+methodName+", causa: "+ e.getCausa() + ", messaggio: " + e.getMessageV3(), e);
 			break;
 		}
 		FaultBean respKo = new FaultBean();
@@ -547,7 +531,7 @@ public class BaseApiServiceImpl {
 			respKo.setCodice(e.getFaultBean().getFaultCode());
 			respKo.setDescrizione(e.getFaultBean().getFaultString());
 			respKo.setDettaglio(e.getFaultBean().getDescription());
-			statusCode = 502; // spostato dalla govpayException perche' ci sono dei casi di errore che non devono restituire 500;
+			statusCode = 502; // spostato dalla govpayException perche' ci sono dei casi di errore che non devono restituire 500
 		} else {
 			respKo.setCategoria(CategoriaEnum.fromValue(e.getCategoria().name()));
 			respKo.setCodice(e.getCodEsitoV3());
@@ -564,13 +548,13 @@ public class BaseApiServiceImpl {
 		return handleResponseKo(responseBuilder, transactionId).build();
 	}
 
-	private Response handleUnprocessableEntityException(UriInfo uriInfo, HttpHeaders httpHeaders, String methodName, UnprocessableEntityException e, String transactionId) {
-		this.log.info("Errore ("+e.getClass().getSimpleName()+") durante "+methodName+": "+ e.getMessage());
+	private Response handleUnprocessableEntityException(String methodName, UnprocessableEntityException e, String transactionId) {
+		this.logInfo("Errore ("+e.getClass().getSimpleName()+") durante "+methodName+": "+ e.getMessage());
 
 		FaultBean respKo = new FaultBean();
 		respKo.setCategoria(CategoriaEnum.RICHIESTA);
 		respKo.setCodice("SEMANTICA");
-		respKo.setDescrizione("Richiesta non valida");
+		respKo.setDescrizione(RICHIESTA_NON_VALIDA);
 		respKo.setDettaglio(e.getDetails());
 
 		ResponseBuilder responseBuilder = Response.status(e.getTransportErrorCode()).type(MediaType.APPLICATION_JSON).entity(respKo);
@@ -582,12 +566,12 @@ public class BaseApiServiceImpl {
 		return handleResponseKo(responseBuilder, transactionId).build();
 	}
 
-	private Response handleValidationException(UriInfo uriInfo, HttpHeaders httpHeaders, String methodName, ValidationException e, String transactionId) {
-		this.log.warn("Richiesta rifiutata per errori di validazione: " + e);
+	private Response handleValidationException(ValidationException e, String transactionId) {
+		this.logWarn("Richiesta rifiutata per errori di validazione: " + e);
 		FaultBean respKo = new FaultBean();
 			respKo.setCategoria(CategoriaEnum.RICHIESTA);
 			respKo.setCodice("SINTASSI");
-			respKo.setDescrizione("Richiesta non valida");
+			respKo.setDescrizione(RICHIESTA_NON_VALIDA);
 			respKo.setDettaglio(e.getMessage());
 
 		int statusCode = 400;
@@ -597,12 +581,12 @@ public class BaseApiServiceImpl {
 		return handleResponseKo(responseBuilder, transactionId).build();
 	}
 
-	private Response handleIOException(UriInfo uriInfo, HttpHeaders httpHeaders, String methodName, IOException e, String transactionId) {
-		this.log.warn("Richiesta rifiutata per errori di validazione: " + e);
+	private Response handleIOException(IOException e, String transactionId) {
+		this.logWarn("Richiesta rifiutata per errori di validazione: " + e);
 		FaultBean respKo = new FaultBean();
 			respKo.setCategoria(CategoriaEnum.RICHIESTA);
 			respKo.setCodice("SINTASSI");
-			respKo.setDescrizione("Richiesta non valida");
+			respKo.setDescrizione(RICHIESTA_NON_VALIDA);
 			respKo.setDettaglio(e.getMessage());
 
 		int statusCode = 400;
@@ -612,8 +596,8 @@ public class BaseApiServiceImpl {
 		return handleResponseKo(responseBuilder, transactionId).build();
 	}
 
-	private Response handleIncassiException(UriInfo uriInfo, HttpHeaders httpHeaders, String methodName, IncassiException e, String transactionId) {
-		this.log.info("Errore ("+e.getClass().getSimpleName()+") durante "+methodName+": "+ e.getMessage() + ": " + e.getDetails());
+	private Response handleIncassiException(String methodName, IncassiException e, String transactionId) {
+		this.logInfo("Errore ("+e.getClass().getSimpleName()+") durante "+methodName+": "+ e.getMessage() + ": " + e.getDetails());
 
 		FaultBean respKo = new FaultBean();
 		respKo.setCategoria(CategoriaEnum.RICHIESTA);
@@ -629,8 +613,8 @@ public class BaseApiServiceImpl {
 		return handleResponseKo(responseBuilder, transactionId).build();
 	}
 
-	private Response handleRedirectException(UriInfo uriInfo, HttpHeaders httpHeaders, String methodName, RedirectException e, String transactionId) {
-		this.log.error("Esecuzione del metodo ["+methodName+"] si e' conclusa con un errore: " + e.getMessage() + ", redirect verso la url: " + e.getLocation());
+	private Response handleRedirectException(String methodName, RedirectException e, String transactionId) {
+		this.logError("Esecuzione del metodo ["+methodName+"] si e' conclusa con un errore: " + e.getMessage() + ", redirect verso la url: " + e.getLocation());
 		ResponseBuilder responseBuilder = Response.seeOther(e.getURILocation());
 		this.handleEventoOk(responseBuilder, transactionId);
 		if(transactionId != null)
@@ -641,16 +625,7 @@ public class BaseApiServiceImpl {
 
 	protected void logContext(IContext ctx) {
 		if(ctx != null) {
-//			if(this.response != null) {
-//				String transactionId = ctx.getTransactionId();
-//				this.response.setHeader(this.transactionIdHeaderName, transactionId);
-//			}
-
-//			try {
-//				ctx.getApplicationLogger().log();
-//			} catch (UtilsException e) {
-//				 this.log.error("Errore durante la chiusura dell'operazione: "+e.getMessage(),e);
-//			}
+			// donothing
 		}
 	}
 
@@ -697,5 +672,41 @@ public class BaseApiServiceImpl {
 		ctx.getEventoCtx().setException(exception);
 
 		return responseBuilder;
+	}
+
+	protected void logDebugException(String msg, Exception e) {
+		LogUtils.logDebugException(this.log, msg, e);
+	}
+
+	protected void logDebug(String msg, Object ... params) {
+		LogUtils.logDebug(this.log, msg, params);
+	}
+
+	protected void logInfoException(String msg, Exception e) {
+		LogUtils.logInfoException(this.log, msg, e);
+	}
+
+	protected void logInfo(String msg, Object ... params) {
+		LogUtils.logInfo(this.log, msg, params);
+	}
+
+	protected void logWarnException(String msg, Exception e) {
+		LogUtils.logWarnException(this.log, msg, e);
+	}
+
+	protected void logWarn(String msg, Object ... params) {
+		LogUtils.logWarn(this.log, msg, params);
+	}
+
+	protected void logError(String msg) {
+		LogUtils.logError(this.log, msg);
+	}
+
+	protected void logError(String msg, Exception e) {
+		LogUtils.logError(this.log, msg, e);
+	}
+
+	protected void logTrace(String msg, Object ... params) {
+		LogUtils.logTrace(this.log, msg, params);
 	}
 }
